# ollama-api

./: .env  Cargo.toml  README.md
llm_api/: .env  Cargo.toml
llm_api/src/: env  main.rs  utils.rs
llm_api/src/user/: mod.rs  routers.rs  schemes.rs  utils.rs
src/: main.rs
src/user/: mod.rs  proxy.rs  routers.rs  schemas.rs  schemes.rs  utils.rs
