[package]
name = "llm_api"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { version = "1.0.0", features = ["from"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
pre-commit = "0.5.2"
reqwest = { version = "0.12.7", features = ["json"] }
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[package.metadata.precommit]
fmt = "cargo fmt"
lint = "cargo clippy"

